test csv upload

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,4 @@
 useDynLib(FeedrRewrite, .registration=TRUE)
 importFrom(Rcpp, evalCpp)
 exportPattern("^[[:alpha:]]+")
+test<-read.csv("data-raw/MyData.csv")
